--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: 一键 一鼠 一电脑
-description: 这个世界就是这么简单
+home-title: 刚子的水池子
+description: 汇集点点滴滴，构建丰富水池
 ---
 
 {% include header.html %}
