--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 home-title: 刚子的水池子
 description: 汇集点点滴滴，构建丰富水池
-header-img: /img/bg/wallhaven-45xeq3.jpg
+header-img: /bg/wallhaven-45xeq3.jpg
 ---
 
 {% include header.html %}
