--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 home-title: 刚子的水池子
-description: 汇集点点滴滴，构建丰富水池
-header-img: /assets/img/bg/wallhaven-45xeq3.jpg
+description: 汇集点点滴滴，构建丰富池子
+header-img: \assets\img\bg\wallhaven-45xeq3.jpg
 ---
 
 {% include header.html %}
